--- a/main/blog/templates/single-blog.html
+++ b/main/blog/templates/single-blog.html
@@ -1,6 +1,15 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %}{{ post.title }} | وبلاگ شما{% endblock %}
+{% block title %}{{ post.title }} | {{ company_info.name|default:global_settings.site_title }}{% endblock %}
+{% block meta_title %}{{ post.title }} | {{ company_info.name|default:global_settings.site_title }}{% endblock %}
+{% block meta_description %}{{ post.summary|default:post.title }}{% endblock %}
+{% block og_description %}{{ post.summary|default:post.title }}{% endblock %}
+{% block twitter_title %}{{ post.title }} | {{ company_info.name|default:global_settings.site_title }}{% endblock %}
+{% block twitter_description %}{{ post.summary|default:post.title }}{% endblock %}
+{% block extra_meta %}
+  <meta property="og:type" content="article">
+  <meta property="article:published_time" content="{{ post.created_at|date:'c' }}">
+{% endblock %}
 
 {% block css %}
 <link href="{% static 'pages/css/single-blog.css' %}" rel="stylesheet" />
