--- a/main/home/templates/home.html
+++ b/main/home/templates/home.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 {% load static %}
 {% load main_filters %}
-{% block title %}Djangocenter Blog List{% endblock %}
+{% block title %}{{ global_settings.site_title|default:'فروشگاه اینترنتی' }}{% endblock %}
+{% block meta_title %}{{ global_settings.site_title|default:'فروشگاه اینترنتی' }}{% endblock %}
+{% block meta_description %}{{ global_settings.meta_description|default:company_info.short_description }}{% endblock %}
+{% block og_description %}{{ global_settings.meta_description|default:company_info.short_description }}{% endblock %}
+{% block twitter_title %}{{ global_settings.site_title|default:'فروشگاه اینترنتی' }}{% endblock %}
+{% block twitter_description %}{{ global_settings.meta_description|default:company_info.short_description }}{% endblock %}
 
 
 {% block css %}
@@ -58,135 +63,174 @@ home-style1
     </section>
     <!--  End popular cat  -->
     <!--  Start header  -->
+
     <section class="tc-header-style1">
-      <div class="container">
-        <div class="content">
-          <div class="row">
-            <div class="col-lg-8">
-              <div class="main-slider">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">
-                    <div class="slide-card">
-                      <div class="img th-450">
-                        <img alt="" class="img-cover" src="{% static 'img/head/head_1.png' %}" />
-                      </div>
-                      <div class="info text-white">
-                        <div class="cont">
-                          <h2 class="fsz-35 fw-200">
-                            تلویزیون اندرویدی<br />40 اینچی
-                          </h2>
-                          <p class="fsz-12 mt-15 text-uppercase">
-                            تلویزیون Android Full HD Full HD با دستیار
-                            Google
-                          </p>
-                          <a class="butn px-5 py-3 bg-blue1 text-white rounded-pill mt-60 fw-600"
-                            href="../pages/single_product.html">
-                            <span>اکنون خرید کنید</span>
-                          </a>
+          <div class="container">
+            <div class="content">
+              <div class="row">
+                <!-- اسلایدر اصلی -->
+                <div class="col-lg-8">
+                  <div class="main-slider">
+                    <div class="swiper-wrapper">
+                      {% for slide in main_slides %}
+                      <div class="swiper-slide">
+                        <div class="slide-card">
+                          <div class="img th-450">
+                            <img 
+                              alt="{{ slide.title }}"
+                              class="img-cover" 
+                              src="{{ slide.image.url }}"
+                            />
+                          </div>
+                          <div class="info text-white">
+                            <div class="cont">
+                              <h2 class="fsz-35 fw-200">
+                                {{ slide.title|linebreaksbr }}
+                              </h2>
+                              {% if slide.subtitle %}
+                              <p class="fsz-12 mt-15 text-uppercase">
+                                {{ slide.subtitle }}
+                              </p>
+                              {% endif %}
+                              <a
+                                class="butn px-5 py-3 bg-blue1 text-white rounded-pill mt-60 fw-600"
+                                href="{{ slide.button_url }}"
+                              >
+                                <span>{{ slide.button_text }}</span>
+                              </a>
+                            </div>
+                          </div>
                         </div>
                       </div>
+                      {% endfor %}
                     </div>
-                  </div>
-                  <div class="swiper-slide">
-                    <div class="slide-card">
-                      <div class="img th-450">
-                        <img alt="" class="img-cover" src="{% static 'img/head/head_1.png' %}" />
-                      </div>
-                      <div class="info text-white">
-                        <div class="cont">
-                          <h2 class="fsz-35 fw-200">
-                            تلویزیون اندرویدی<br />40 اینچی
-                          </h2>
-                          <p class="fsz-12 mt-15 text-uppercase">
-                            تلویزیون Android Full HD Full HD با دستیار
-                            Google
-                          </p>
-                          <a class="butn px-5 py-3 bg-blue1 text-white rounded-pill mt-60 fw-600"
-                            href="../pages/single_product.html">
-                            <span>اکنون خرید کنید</span>
-                          </a>
-                        </div>
-                      </div>
+                    <div class="slider-controls">
+                      <div class="swiper-button-prev"></div>
+                      <div class="swiper-pagination"></div>
+                      <div class="swiper-button-next"></div>
                     </div>
                   </div>
                 </div>
-                <div class="slider-controls">
-                  <div class="swiper-button-prev"></div>
-                  <div class="swiper-pagination"></div>
-                  <div class="swiper-button-next"></div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="card-overlay card-center">
-                <div class="img th-450">
-                  <img alt="" class="img-cover" src="{% static 'img/head/head_2.png' %}" />
-                </div>
-                <div class="info text-white p-50">
-                  <div class="cont">
-                    <h3 class="fsz-30">فن مرطوب کننده</h3>
-                    <p class="fsz-13 mt-1">از 299 تومان</p>
-                  </div>
-                  <a class="butn px-5 py-3 bg-white color-000 rounded-pill fw-600"
-                    href="{% url 'products:product_list' %}">
-                    <span>اکنون کشف کنید</span>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="card-overlay wow fadeInUp slow" data-wow-delay="0.2s">
-                <div class="img th-230">
-                  <img alt="" class="img-cover" src="{% static 'img/head/head_3.png' %}" />
-                </div>
-                <div class="info color-000 p-30">
-                  <div class="cont">
-                    <h3 class="fsz-30">مینی<br />2022</h3>
-                    <p class="fsz-13 mt-1 color-666">
-                      قدرت مگا در اندازه کوچک
-                    </p>
-                  </div>
-                  <a class="butn px-4 py-2 bg-dark text-white rounded-pill fw-600 fsz-12 mt-30"
-                    href="../pages/single_product.html">
-                    <span>اکنون خرید کنید</span>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3">
-              <div class="card-overlay wow fadeInUp slow" data-wow-delay="0.4s">
-                <div class="img th-230">
-                  <img alt="" class="img-cover" src="{% static 'img/head/head_4.png' %}" />
-                </div>
-                <div class="info text-white p-30">
-                  <div class="cont">
-                    <h6 class="fsz-20">تصفیه کننده <br />هوا</h6>
-                    <small class="fsz-10 color-999 d-block text-uppercase mt-2">از</small>
-                    <p class="fsz-20 color-lightGreen">169 تومان</p>
+
+                <!-- کارت بزرگ سمت راست -->
+                {% with promo_cards.large.first as card %}
+                <div class="col-lg-4">
+                  <div class="card-overlay card-center">
+                    <div class="img th-450">
+                      <img 
+                        alt="{{ card.title }}"
+                        class="img-cover"
+                        src="{{ card.image.url }}"
+                      />
+                    </div>
+                    <div class="info text-white p-50">
+                      <div class="cont">
+                        <h3 class="fsz-30">{{ card.title }}</h3>
+                        {% if card.price_text %}
+                        <p class="fsz-13 mt-1">{{ card.price_text }}</p>
+                        {% endif %}
+                      </div>
+                      <a
+                        class="butn px-5 py-3 bg-white color-000 rounded-pill fw-600"
+                        href="{{ card.button_url|default:'#' }}"
+                      >
+                        <span>{{ card.button_text|default:'اکنون کشف کنید' }}</span>
+                      </a>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </div>
-            <div class="col-lg-3">
-              <div class="card-overlay wow fadeInUp slow" data-wow-delay="0.6s">
-                <div class="img th-230">
-                  <img alt="" class="img-cover" src="{% static 'img/head/head_5.png' %}" />
-                </div>
-                <div class="info text-white p-30">
-                  <div class="cont">
-                    <small class="fsz-10 d-block text-uppercase mb-2">ماشین لباسشویی</small>
-                    <h6 class="fsz-20">وابسته به آنتاتیک<br />حداکثر 2</h6>
+                {% endwith %}
+
+                <!-- کارت متوسط -->
+                {% with promo_cards.medium.first as card %}
+                <div class="col-lg-6">
+                  <div class="card-overlay wow fadeInUp slow" data-wow-delay="0.2s">
+                    <div class="img th-230">
+                      <img 
+                        alt="{{ card.title }}"
+                        class="img-cover"
+                        src="{{ card.image.url }}"
+                      />
+                    </div>
+                    <div class="info color-000 p-30">
+                      <div class="cont">
+                        <h3 class="fsz-30">{{ card.title|linebreaksbr }}</h3>
+                        {% if card.subtitle %}
+                        <p class="fsz-13 mt-1 color-666">{{ card.subtitle }}</p>
+                        {% endif %}
+                      </div>
+                      <a
+                        class="butn px-4 py-2 bg-dark text-white rounded-pill fw-600 fsz-12 mt-30"
+                        href="{{ card.button_url|default:'#' }}"
+                      >
+                        <span>{{ card.button_text|default:'اکنون خرید کنید' }}</span>
+                      </a>
+                    </div>
                   </div>
-                  <a class="butn px-4 py-2 bg-white color-000 rounded-pill fw-600 fsz-12 mt-50"
-                    href="../pages/single_product.html">
-                    <span>اکنون خرید کنید</span>
-                  </a>
                 </div>
+                {% endwith %}
+
+                <!-- کارت کوچک اول -->
+                {% with promo_cards.small.0 as card %}
+                <div class="col-lg-3">
+                  <div class="card-overlay wow fadeInUp slow" data-wow-delay="0.4s">
+                    <div class="img th-230">
+                      <img 
+                        alt="{{ card.title }}"
+                        class="img-cover"
+                        src="{{ card.image.url }}"
+                      />
+                    </div>
+                    <div class="info text-white p-30">
+                      <div class="cont">
+                        <h6 class="fsz-20">{{ card.title|linebreaksbr }}</h6>
+                        {% if card.price_text %}
+                        <small class="fsz-10 color-999 d-block text-uppercase mt-2">
+                          از
+                        </small>
+                        <p class="fsz-20 color-lightGreen">{{ card.price_text }}</p>
+                        {% endif %}
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                {% endwith %}
+
+                <!-- کارت کوچک دوم -->
+                {% with promo_cards.small.1 as card %}
+                <div class="col-lg-3">
+                  <div class="card-overlay wow fadeInUp slow" data-wow-delay="0.6s">
+                    <div class="img th-230">
+                      <img 
+                        alt="{{ card.title }}"
+                        class="img-cover"
+                        src="{{ card.image.url }}"
+                      />
+                    </div>
+                    <div class="info text-white p-30">
+                      <div class="cont">
+                        {% if card.subtitle %}
+                        <small class="fsz-10 d-block text-uppercase mb-2">
+                          {{ card.subtitle }}
+                        </small>
+                        {% endif %}
+                        <h6 class="fsz-20">{{ card.title|linebreaksbr }}</h6>
+                      </div>
+                      {% if card.button_text %}
+                      <a
+                        class="butn px-4 py-2 bg-white color-000 rounded-pill fw-600 fsz-12 mt-50"
+                        href="{{ card.button_url|default:'#' }}"
+                      >
+                        <span>{{ card.button_text }}</span>
+                      </a>
+                      {% endif %}
+                    </div>
+                  </div>
+                </div>
+                {% endwith %}
               </div>
             </div>
           </div>
-        </div>
-      </div>
     </section>
     <!--  End header  -->
   </header>
@@ -896,13 +940,60 @@ home-style1
       <h3 class="fsz-30 mb-30">جستجوی محصولات</h3>
       <div class="links">
         {% for tag in random_tags %}
-        <a class="link" href="#">{{tag.name}}</a>
+        <a class="link" href="#">{{ tag.name }}</a>
+        {% empty %}
+        <span class="text-muted fsz-12">تگی موجود نیست</span>
         {% endfor %}
 
       </div>
     </div>
   </section>
   <!--  End trend-search  -->
+    <!-- Start Our Partners Section -->
+<section class="tc-partners-style1 pb-80 pt-50 wow fadeInUp slow" data-wow-delay="0.2s">
+  <div class="container">
+    <div class="sec-title mb-40">
+      <div class="row align-items-center">
+        <div class="col-lg-8">
+          <h3 class="fsz-30 text-capitalize">همکاران و برندهای ما</h3>
+          <p class="text-muted mt-2">شرکت‌ها و برندهایی که با آنها همکاری می‌کنیم</p>
+        </div>
+      </div>
+    </div>
+    
+    <div class="partners-slider position-relative">
+      <div class="swiper-wrapper">
+        {% for partner in partners %}
+        <div class="swiper-slide">
+          <div class="partner-card text-center bg-white rounded-3 p-3 h-100">
+            <a href="{{ partner.website_url }}" target="_blank" rel="noopener noreferrer" class="d-block h-100">
+              <div class="partner-logo th-100 mb-3">
+                <img src="{{ partner.logo.url }}" alt="{{ partner.name }}" class="img-contain">
+              </div>
+              <h5 class="fsz-16 fw-bold mt-3 mb-2">{{ partner.name }}</h5>
+              {% if partner.description %}
+              <p class="fsz-12 color-666 mt-2 mb-0">{{ partner.description|truncatewords:10 }}</p>
+              {% endif %}
+            </a>
+          </div>
+        </div>
+        {% empty %}
+        <div class="swiper-slide">
+          <div class="alert alert-info rounded-3 mb-0">همکاری ثبت نشده است</div>
+        </div>
+        {% endfor %}
+      </div>
+      
+      <!-- Navigation Buttons -->
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+      
+      <!-- Pagination -->
+      <div class="swiper-pagination"></div>
+    </div>
+  </div>
+</section>
+<!-- End Our Partners Section -->
   <!--  Start main-banner  -->
   <section class="tc-main-banner-style1 wow fadeInUp slow" data-wow-delay="0.2s">
     <div class="container">
@@ -973,8 +1064,7 @@ home-style1
 
                       <span class="label fsz-11 py-1 px-3 rounded-pill bg-blue1 text-white text-uppercase">پرفروش</span>
                     </div>
-                    <a class="title fsz-14 mt-15 fw-600 hover-blue1"
-                      href="../pages/single_product.html">{{product.title}}</a>
+                    <a class="title fsz-14 mt-15 fw-600 hover-blue1" href="{% url 'products:product_detail' pk=product.id slug=product.slug %}">{{product.title}}</a>
 
                     {% if product.need_to_call %}
                     <p class="fsz-12 mt-2">
@@ -1257,7 +1347,7 @@ home-style1
             </div>
             <div class="blog-slider">
               <div class="row">
-                {% for post in post %}
+                {% for post in posts %}
                 <div class="col-12 col-md-6">
                   <div class="advc-item">
                     <div class="img">
