--- a/main/payments/templates/checkout.html
+++ b/main/payments/templates/checkout.html
@@ -153,8 +153,9 @@ home-style3 sin-prod-pg-1
                           </div>
                           
                           <!-- فیلدهای مخفی برای ارسال داده -->
-                          <input type="hidden" name="shipping_cost" id="shipping-cost" value="0">
+                          <input type="hidden" name="shipping_cost" id="shipping-cost" value="{{ shipping_price|default:'0' }}">
                           <input type="hidden" name="shipping_name" id="shipping-name" value="پست پیشتاز">
+                          <input type="hidden" name="final_price" id="final-price-input" value="{{ final_price|default:'0' }}">
                       </form>
                   </div>
               </div>
@@ -179,15 +180,15 @@ home-style3 sin-prod-pg-1
                                   </div>
                                   <div class="d-flex justify-content-between py-2">
                                       <span>جمع قیمت محصولات</span>
-                                      <span id="product-total" data-price="1500000"> 1500000 تومان</span>
+                                      <span id="product-total" data-price="{{ cart_total }}">{{ cart_total|floatformat:0|intcomma }} تومان</span>
                                   </div>
                                   <div class="d-flex justify-content-between py-2">
                                       <span>هزینه ارسال</span>
-                                      <span id="shipping-fee" data-fee="25000" class="color-red1">25000 تومان</span>
+                                      <span id="shipping-fee" class="color-red1">{% if shipping_price == 0 %}رایگان{% else %}{{ shipping_price|floatformat:0|intcomma }} تومان{% endif %}</span>
                                   </div>
                                   <div class="total d-flex justify-content-between py-3 fsz-16 fw-bold border-top">
                                       <span>مبلغ قابل پرداخت</span>
-                                      <span id="payable-amount" class="color-green2"></span>
+                                      <span id="payable-amount" class="color-green2">{{ final_price|floatformat:0|intcomma }} تومان</span>
                                   </div>
                               </div>
                           </div>
